fix list spacing in dripline by adding margin to list items

--- a/_sass/_dripline.scss
+++ b/_sass/_dripline.scss
@@ -15,6 +15,10 @@
     ul, ol {
         @extend .f4;
         @extend .lh-copy;
+
+        li:not(:last-child) {
+            margin-bottom: $spacing-extra-small;
+        }
     }
 
     p {
